darkmap/front/static_front/galaxy.css
/* ... */
obj- img {
    position: absolute;
}

/* .contents div[data-ids-info]:hover,
.contents div[data-jump-dest]:hover,
.contents div.mineable:hover  */
system-:hover,
.jumphole:hover,
.tradelane:hover,
.star:hover,
.base:hover,
.playerbase:hover,
.planet:hover,
.wreck:hover,
.zone:hover,
.obj_other:hover,
.obj_disco_encounter:hover,
.mining:hover {
    box-shadow: 0em 0em 0.4em 0.2em rgb(237, 112, 7), inset 0em 0em 0.15em 0em rgb(237, 112, 7) !important;
    color: rgb(255, 167, 6);
}

:target,
.is-target {
    display: block !important;
    animation: pulse 1.5s infinite;
}

@-webkit-keyframes pulse {
    0% {
        -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.8);
    }

    70% {
        -webkit-box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
    }

    100% {
        -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
    }
}

@keyframes pulse {
    0% {
        -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.8);
        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.8);
    }

    70% {
        -moz-box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
        box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
    }

    100% {
        -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
    }
}

system-:hover system-label,
.jumphole:hover system-label,
.tradelane:hover system-label,
.star:hover system-label,
.base:hover system-label,
.playerbase:hover system-label,
.mining:hover system-label,
.planet:hover system-label,
.wreck:hover system-label,
.obj_other:hover system-label,
.obj_disco_encounter:hover system-label,
.zone:hover system-label {
    box-shadow: 0 0 0.05em 0.1em rgba(0, 0, 0, 0.45);
    background-color: rgba(0, 0, 0, 0.45);
    border-radius: 0.2em;

    box-shadow: 0em 0em 0.4em 0.2em rgb(237, 112, 7), inset 0em 0em 0.15em 0em rgb(237, 112, 7);
    color: rgb(255, 167, 6);
}

.playerbase system-label {
    color: var(--playerbase_color);
}

.playerbase system-label.pob_dockable {
    color: var(--playerbase_dockable_color);
}

ul.text_align_left * {
    text-align: left;
}

.mining system-label {
    color: var(--mining_color);
}

.atmosphere {
    border-radius: 50%;
    border: 1px solid rgba(255, 255, 0, 0.3);
    z-index: -1;
    box-sizing: border-box;
}

.zoomedOut .jumphole img {
    visibility: hidden;
}

.zoomedOut .jumphole {
    background: var(--jh_color_jumphole);
    box-shadow: 0em 0em 0.8em 0.3em var(--jh_color_jumphole);
}

.zoomedOut .jumphole.jh_jumpgate {
    background: var(--jh_color_jumpgate);
    box-shadow: 0em 0em 0.8em 0.3em var(--jh_color_jumpgate);
}

.zoomedOut .jumphole.jh_unstable_cargo_limit {
    background: var(--jh_color_unstable_cargo_limit);
    box-shadow: 0em 0em 0.8em 0.3em var(--jh_color_unstable_cargo_limit);
}

.zoomedOut .jumphole.jh_fighter_only {
    background: var(--jh_color_freighter_only);
    box-shadow: 0em 0em 0.8em 0.3em var(--jh_color_freighter_only);
}

.zoomedOut .jumphole.jh_alien {
    background: var(--jh_color_alien);
    box-shadow: 0em 0em 0.8em 0.3em var(--jh_color_alien);
}

.zoomedOut .jumphole.jh_campaign_locked {
    background: var(--jh_color_campaign_locked);
    box-shadow: 0em 0em 0.8em 0.3em var(--jh_color_campaign_locked);
}

.zoomedOut .jumphole.jh_unknown {
    background: var(--jh_color_unknown);
}

.zoomedOut .jumphole {
    border-radius: 100%;
    width: 0.5em;
    height: 0.5em;
    margin-top: -0.25em;
    margin-left: -0.25em;
}

.zoomedIn .jumphole img {
    visibility: inherit;
}

cycle- {
    border-color: #2299F5;
    border-width: 3px;
    border-radius: 100%;
    border-style: solid;
    background-color: rgb(36, 36, 36);
    left: -25%;
    top: -25%;
    position: absolute;
    height: 0.65em;
    width: 0.65em;
}

system-label-wrap {
    color: transparent;
    /* make the text invisible */
    user-select: none;
    /* prevent selection of the text */
    position: absolute;
    left: 50%;

    font-family: var(--font-family);
    font-size: 0.8rem;
    position: absolute;
    display: inline-block;
    top: 1em;
    white-space: nowrap;

    pointer-events: none;
}


map-.system system-label-wrap {
    font-size: 1.0rem;
}

.zoomed08 map-.system system-label-wrap {
    font-size: 0.8rem;
}

.zoomed06 map-.system system-label-wrap {
    font-size: 0.6rem;
}

.zoomed04 map-.system system-label-wrap {
    font-size: 0.4rem;
}

system-label {
    margin-left: 0px;
    left: -50%;
    position: absolute;
    display: inline-block;
    top: 0.2em;
    white-space: nowrap;
    text-shadow: 0em 0em 0.3em black !important;
    color: white;

    pointer-events: auto;
}

map-.galaxy system-label-wrap {
    font-size: clamp(0.55rem, 1.2vh, 3rem);
}

map-.system system-label-wrap {
    font-size: clamp(0.65rem, 1.5vh, 3.3rem);
}

system-title {
    position: absolute;
    bottom: 0.1em;
    color: white;
    text-align: center;
    width: 100%;
    font-family: var(--font-family);
    font-size: 3em;
    padding: 0;
    margin: 0;
    color: rgb(135, 195, 224);

    display: block;
    font-weight: bold;
    margin-bottom: 10px;
}

connection- {
    position: absolute;
    z-index: -1;
}

line- {
    position: absolute;
    width: 0.125em;
    background-color: rgba(69, 150, 255, 0.9);
    display: block;
}



@media (min-aspect-ratio: 1) {
    background- {
        height: 100vh;
        width: 100vw;
    }
}

@media (max-aspect-ratio: 1) {
    background- {
        height: 100vh;
        width: 100vh;
    }
}

@media (min-aspect-ratio: 6/4) {
    top-bar- {
        width: 100%;
    }
}

@media (max-aspect-ratio: 6/4) {
    top-bar- {
        flex-direction: column-reverse;
    }

    search-bar- {
        width: 100% !important;
    }

    search-bar-counterweight- {
        display: none;
    }
}

.obj_fallback_unclassified {
    width: 0.275em !important;
    height: 0.275em !important;
    margin-top: -0.1375em;
    margin-left: -0.1375em;
    background: #EC7F1F;
}

.obj_fallback_shape img {
    display: none;
}
/* ... */

